Bugfix: create streams when needed instead of reusing

--- a/ex9/index.html
+++ b/ex9/index.html
@@ -5,6 +5,7 @@
 		<title>Hot page</title>
 	</head>
 	<body>
-		This page is very hot.
+		This page is {100*2} degrees hot. <br />
+		Today is {Date.now()}
 	</body>
 </html>
